# atomic_cli

./: .flake8  .gitignore  README.md  format_test.py  format_test_commands.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yaml  publish-to-test-pypi.yaml  release-create.yaml  release-creator.yml  release-drafter.yml  test-build.yml
Vuln/: SUMMARY.md  vuln-0001-CHANGES.md  vuln-0001-FIXED.md  vuln-0001-SECURITY_FIX.md  vuln-0001.md  vuln-0002.md  vuln-0003-FIXED.md  vuln-0003.md  vuln-0004-FIXED.md  vuln-0004.md  vuln-0005-FIXED.md  vuln-0005.md
atomict/: __init__.py  __version__.py  api.py  auth.py  cli.py  env.py  exceptions.py  secure_storage.py
atomict/ase/: atatoms.py
atomict/cli/: main.py
atomict/infra/: README_LOKI_LOGGING.md  gpu.py  k8s.py  logging.py  streaming.py
atomict/io/: atoms.py  cif.py  json.py  mpv1.py  mpv2.py  msgpack.py  trajectory.py  utils.py
atomict/ml/: model.py
atomict/organization/: __init__.py  client.py  exceptions.py  models.py
atomict/project/: link.py  molecules.py  note.py  project.py  stars.py  tags.py
atomict/simulation/: __init__.py  cantera.py  catalysis.py  counterfactual.py  defect.py  ea.py  fhi_aims.py  ht_mlrelax.py  ht_sqs.py  impact.py  kpoint.py  mattergen.py  md.py  mlrelax.py  models.py  phonon.py  qe.py  sqs.py  utils.py  vibes.py
atomict/structure/: __init__.py  conversion.py  search.py
atomict/user/: files.py  workspace.py
atomict/utils/: path_security.py  tenacity.py  (+1 more)
docs/: openapi.yaml
tests/: .env.example  test_loki_handler_close.py  test_vectorizers.py
(+110 files in other folders)
