[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atomict"
authors = [
    { name = "Alain Richardt", email = "alain@atomictessellator.com" },
]
description = "The client application for the https://atomictessellator.com/"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/AtomicTessellator/atomic_cli"

[project.scripts]
at = "atomict.cli.main:main"

[tool.setuptools.packages.find]
include = ["atomict*"]
exclude = ["tests*", "tests.*"]

[tool.setuptools.dynamic]
version = {attr = "atomict.__version__.__version__"}
dependencies = {file = ["requirements.txt"]}